--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -2,3 +2,8 @@ version: "3.9"
 services:
   flask:
     build: .
+    command: flask run --host=0.0.0.0
+    environment:
+      - FLASK_APP=app.py
+    ports:
+      - "5000:5000"
