--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -2,7 +2,12 @@ version: "3.9"
 services:
   flask:
     build: .
+    command: gunicorn -b 0.0.0.0:5000 app:app --reload
     ports:
       - "5000:5000"
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_DEBUG=True
+      - PYTHONUNBUFFERED=True
     volumes:
       - ./:/root
