--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "5000:5000"
     environment:
       - FLASK_APP=app.py
-      - FLASK_DEBUG=True
+      - FLASK_DEBUG=1
       - PYTHONUNBUFFERED=True
     volumes:
       - ./:/root
